# bitsandbytes

./: CMakeLists.txt
bitsandbytes/: __main__.py
bitsandbytes/cuda_setup/: env_vars.py  main.py
csrc/: CMakeLists.txt  cpu_ops.cpp  kernels.cu  ops.cu  ops.cuh
